# posix-commons

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  compile.sh  gitpush.sh  maketest.sh  release.sh  test.sh
doc/: c_c.md  kq.md
include/: posixc.h
src/: CMakeLists.txt  algorithms.c  algorithms.h  asynclogcli.c  asynclogcli.h  asynclogsvr.c  asynclogsvr.h  event.c  event.h  fileio.c  fileio.h  internal.h  ipc.c  ipc.h  list.h  localasynclog.c  log.c  log.h  reactor.c  reactor.h  runtime.c  runtime.h  signal.c  signal.h  slice.c  slice.h  tcp.c  tcp.h
src/common/: CMakeLists.txt  boyermoore.c  boyermoore.h  kmp.c  kmp.h  math.h  slice.c  slice.h  timestr.c  timestr.h  utils.c  utils.h
src/linux/: CMakeLists.txt  epoller.c  epoller.h  event.c  event_epoll.c  eventfd.c  eventfd.h  reactor.c  reactor_epoll.c  signalfd.c  signalfd.h  timerfd.h
src/mac/: CMakeLists.txt  event.c  event_kq.c  kqpoller.c  kqpoller.h  reactor.c  reactor_kq.c
tests/: CMakeLists.txt  asynclogcli_test.c  asynclogsvr_test.c  fileio_test.c  ipc_test.c  list_test.c  slice_test.c  timer_test.c
