aux_source_directory(. POSIXCDIRSRCS)
add_subdirectory(./common)
if(LINUX) 
    add_subdirectory(./linux)
    add_library(posixc ${POSIXCDIRSRCS})
    target_link_libraries(posixc posixc_linux posixc_common pthread)
else()
    add_library(posixc ${POSIXCDIRSRCS})
    target_link_libraries(posixc posixc_common pthread)
endif()

